--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,6 +26,35 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+
+body {
+  --sb-track-color: #000000;
+  --sb-thumb-color: #662d91;
+  --sb-size: 9px;
+}
+
+body::-webkit-scrollbar {
+  width: var(--sb-size)
+}
+
+body::-webkit-scrollbar-track {
+  background: var(--sb-track-color);
+  border-radius: 1px;
+}
+
+body::-webkit-scrollbar-thumb {
+  background: var(--sb-thumb-color);
+  border-radius: 1px;
+  border: 1px solid #28282b;
+}
+
+@supports not selector(::-webkit-scrollbar) {
+  body {
+    scrollbar-color: var(--sb-thumb-color)
+                     var(--sb-track-color);
+  }
+}
+
 h1, h2, h3, h4, h5, h6 {
   font-family: 'MedievalSharp';
 }
