--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,13 +24,14 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+  
 }
 
 
 body {
   --sb-track-color: #000000;
-  --sb-thumb-color: #662d91;
-  --sb-size: 9px;
+  --sb-thumb-color: #ffffff;
+  --sb-size: 11px;
 }
 
 body::-webkit-scrollbar {
@@ -39,13 +40,13 @@ body::-webkit-scrollbar {
 
 body::-webkit-scrollbar-track {
   background: var(--sb-track-color);
-  border-radius: 1px;
+  border-radius: 2px;
 }
 
 body::-webkit-scrollbar-thumb {
   background: var(--sb-thumb-color);
-  border-radius: 1px;
-  border: 1px solid #28282b;
+  border-radius: 2px;
+  border: 2px solid #000000;
 }
 
 @supports not selector(::-webkit-scrollbar) {
